Compiler/tests/semantics/fail/metodo_constructor.java
class A {

	A() {
	 	foo = "Lorem ipsum";
	}

	static void main ()
	{}
}
